--- a/Pages/NavigationPages/EditTermsNavPage.xaml
+++ b/Pages/NavigationPages/EditTermsNavPage.xaml
@@ -34,15 +34,15 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Text="Name Of Term" HorizontalTextAlignment ="Start" VerticalTextAlignment="Start" Padding="3" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
-                    <Entry Placeholder="Enter term name"
-               Grid.Row="1"
-               Grid.Column="0"
-               FontSize="20"
-               TextColor="Black"/>
+                    <Entry x:Name="TermNameEntry" Placeholder="Enter term name"
+                           Grid.Row="1"
+                           Grid.Column="0"
+                           FontSize="20"
+                           TextColor="Black"/>
                 </Grid>
             </Frame>
 
-            <Frame BorderColor="Black"
+            <Frame  BorderColor="Black"
                     CornerRadius="5"
                     Padding="015"
                     BackgroundColor="Azure"
@@ -62,7 +62,8 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Text="Start Date" HorizontalTextAlignment ="Start" VerticalTextAlignment="Start" Padding="3" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
-                    <DatePicker 
+                    <DatePicker
+                        x:Name="StartDatePicker"
                         Grid.Row="1"
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
@@ -74,7 +75,7 @@
                 </Grid>
             </Frame>
 
-            <Frame BorderColor="Black"
+            <Frame  BorderColor="Black"
                     CornerRadius="5"
                     Padding="015"
                     BackgroundColor="Azure"
@@ -94,7 +95,8 @@
                     </Grid.ColumnDefinitions>
 
                     <Label Text="End Date" HorizontalTextAlignment ="Start" VerticalTextAlignment="Start" Padding="3" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
-                    <DatePicker 
+                    <DatePicker
+                        x:Name="EndDatePicker"
                         Grid.Row="1"
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
@@ -106,17 +108,18 @@
                 </Grid>
             </Frame>
 
-            <Button 
-    Text="Save"
-    BackgroundColor="#4CAF50"
-    TextColor="White"
-    FontSize="20"
-    FontAttributes="Bold"
-    Margin="20,30,20,20"
-    HeightRequest="50"
-    CornerRadius="10"
-    x:Name="SaveButton"
-    HorizontalOptions="Fill"/>
+            <Button
+                x:Name="SaveButton"
+                Text="Save"
+                BackgroundColor="#4CAF50"
+                TextColor="White"
+                FontSize="20"
+                FontAttributes="Bold"
+                Margin="20,30,20,20"
+                HeightRequest="50"
+                CornerRadius="10"
+                HorizontalOptions="Fill"
+                Clicked="SaveButton_Clicked"/>
 
         </VerticalStackLayout>
     </ScrollView>
