--- a/Pages/NavigationPages/TermsNavPage.xaml
+++ b/Pages/NavigationPages/TermsNavPage.xaml
@@ -16,7 +16,7 @@
                 HorizontalOptions="Center" />
 
             <!--First term button-->
-            <Frame BorderColor="Black"
+            <!--<Frame  BorderColor="Black"
                     CornerRadius="15"
                     Padding="15"
                     BackgroundColor="Azure"
@@ -62,105 +62,78 @@
 
                     <Button Text="Delete" Grid.Row="1" Grid.Column="1" FontAttributes="Bold" FontSize="20" WidthRequest="90" HorizontalOptions="End" Grid.RowSpan="2" BackgroundColor="OrangeRed"/>
                 </Grid>
-            </Frame>
+            </Frame>-->
 
-            <!--Second term button-->
-            <Frame BorderColor="Black"
-                   CornerRadius="15"
-                   Padding="15"
-                   BackgroundColor="Azure"
-                   HasShadow="True"
-                   Margin="10,10,10,0">
-                <Grid ColumnSpacing="5" RowSpacing="5">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
+            <CollectionView x:Name="TermsCollection">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame 
+                            BorderColor="Black"
+                            CornerRadius="15"
+                            Padding="15"
+                            BackgroundColor="Azure"
+                            HasShadow="True"
+                            Margin="10,15,10,0">
+                            <Grid ColumnSpacing="5" RowSpacing="5">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
 
-                    <Label Text="Term 2" HorizontalTextAlignment ="Start" VerticalTextAlignment="Start" Padding="3" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
-                    <Label Text="Start Date: " Grid.Row="1" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <Label Text="End Date: " Grid.Row="2" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
+                                <Label Text="{Binding Name}" HorizontalTextAlignment ="Start" VerticalTextAlignment="Start" Padding="3" TextColor="Black" FontSize="20" FontAttributes="Bold" />
+                                <Label Text="{Binding StartDate, StringFormat='Start: {0:MM/dd/yyyy}'}" Grid.Row="1" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
+                                <Label Text="{Binding EndDate, StringFormat='End: {0:MM/dd/yyyy}'}" Grid.Row="2" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
 
-                    <Button x:Name="navTermPage2Button"
-                        Grid.Row="0" 
-                        Grid.RowSpan="3" 
-                        Grid.Column="0" 
-                        FontAttributes="Bold" 
-                        FontSize="20" 
-                        BackgroundColor="Transparent" 
-                        Clicked="navTermPage2Button_Clicked"/>
+                                <Button x:Name="navTermPageButton"
+                                        Grid.Row="0" 
+                                        Grid.RowSpan="3" 
+                                        Grid.Column="0" 
+                                        FontAttributes="Bold" 
+                                        FontSize="20" 
+                                        BackgroundColor="Transparent" 
+                                        Clicked="navTermPageButton_Clicked" />
 
-                    <Button Text="Edit" 
-                            Grid.Row="0" 
-                            Grid.Column="1" 
-                            CommandParameter="2"
-                            FontAttributes="Bold" 
-                            FontSize="20" 
-                            WidthRequest="70" 
-                            HorizontalOptions="End" 
-                            Grid.RowSpan="1" 
-                            BackgroundColor="#FFA500"
-                            TextColor="White"
-                            Clicked="editTerm_Clicked"/>
+                                <Button 
+                                    x:Name="EditButton"
+                                    Text="Edit" 
+                                    Grid.Row="0" 
+                                    Grid.Column="1" 
+                                    FontAttributes="Bold" 
+                                    FontSize="20" 
+                                    WidthRequest="70" 
+                                    HorizontalOptions="End" 
+                                    Grid.RowSpan="1" 
+                                    BackgroundColor="#FFA500"
+                                    TextColor="White"
+                                    CommandParameter="{Binding .}"
+                                    Clicked="EditButton_Clicked"/>
 
-                    <Button Text="Delete" Grid.Row="1" Grid.Column="1" FontAttributes="Bold" FontSize="20" WidthRequest="90" HorizontalOptions="End" Grid.RowSpan="2" BackgroundColor="OrangeRed"/>
-                </Grid>
-            </Frame>
-
-            <!--Third term button-->
-            <Frame BorderColor="Black"
-                   CornerRadius="15"
-                   Padding="15"
-                   BackgroundColor="Azure"
-                   HasShadow="True"
-                   Margin="10,10,10,0">
-                <Grid ColumnSpacing="5" RowSpacing="5">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-
-                    <Label Text="Term 3" HorizontalTextAlignment ="Start" VerticalTextAlignment="Start" Padding="3" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
-                    <Label Text="Start Date: " Grid.Row="1" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <Label Text="End Date: " Grid.Row="2" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
-
-                    <Button x:Name="navTermPage3Button"
-                        Grid.Row="0" 
-                        Grid.RowSpan="3" 
-                        Grid.Column="0" 
-                        FontAttributes="Bold" 
-                        FontSize="20" 
-                        BackgroundColor="Transparent" 
-                        Clicked="navTermPage3Button_Clicked"/>
-
-                    <Button Text="Edit" 
-                            Grid.Row="0" 
-                            Grid.Column="1" 
-                            CommandParameter="3"
-                            FontAttributes="Bold" 
-                            FontSize="20" 
-                            WidthRequest="70" 
-                            HorizontalOptions="End" 
-                            Grid.RowSpan="1" 
-                            BackgroundColor="#FFA500"
-                            TextColor="White"
-                            Clicked="editTerm_Clicked"/>
-
-                    <Button Text="Delete" Grid.Row="1" Grid.Column="1" FontAttributes="Bold" FontSize="20" WidthRequest="90" HorizontalOptions="End" Grid.RowSpan="2" BackgroundColor="OrangeRed"/>
-                </Grid>
-            </Frame>
+                                <Button 
+                                    x:Name="DeleteButton"
+                                    Text="Delete" 
+                                    Grid.Row="1" 
+                                    Grid.Column="1" 
+                                    FontAttributes="Bold" 
+                                    FontSize="20" 
+                                    WidthRequest="90" 
+                                    HorizontalOptions="End" 
+                                    Grid.RowSpan="2" 
+                                    BackgroundColor="OrangeRed"
+                                    CommandParameter="{Binding Id}"
+                                    Clicked="DeleteButton_Clicked"/>
+                            </Grid>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            
+            
 
             <Button
                 x:Name="addTermButton"
