--- a/Pages/NavigationPages/TermsNavPage.xaml
+++ b/Pages/NavigationPages/TermsNavPage.xaml
@@ -125,7 +125,7 @@
                                     HorizontalOptions="End" 
                                     Grid.RowSpan="2" 
                                     BackgroundColor="OrangeRed"
-                                    CommandParameter="{Binding Id}"
+                                    CommandParameter="{Binding .}"
                                     Clicked="DeleteButton_Clicked"/>
                             </Grid>
                         </Frame>
