--- a/Pages/NavigationPages/AddCourseNavPage.xaml
+++ b/Pages/NavigationPages/AddCourseNavPage.xaml
@@ -36,7 +36,9 @@
                            TextColor="Black" 
                            FontSize="20" 
                            FontAttributes="Bold"/>
-                    <Entry Placeholder="Enter course name"
+                    
+                    <Entry x:Name="CourseNameEntry"
+                           Placeholder="Enter course name"
                            Grid.Row="1"
                            Grid.Column="0"
                            FontSize="20"
@@ -67,7 +69,8 @@
                            TextColor="Black" 
                            FontSize="20" 
                            FontAttributes="Bold"/>
-                    <DatePicker Grid.Row="1"
+                    <DatePicker x:Name="StartDatePickerEntry"
+                                Grid.Row="1"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="2"
                                 Format="MMMM dd, yyyy"
@@ -100,7 +103,8 @@
                            TextColor="Black" 
                            FontSize="20" 
                            FontAttributes="Bold"/>
-                    <DatePicker Grid.Row="1"
+                    <DatePicker x:Name="EndDatePickerEntry"
+                                Grid.Row="1"
                                 Grid.Column="0"
                                 Grid.ColumnSpan="2"
                                 Format="MMMM dd, yyyy"
@@ -133,7 +137,7 @@
                            TextColor="Black" 
                            FontSize="20" 
                            FontAttributes="Bold"/>
-                    <Picker x:Name="StatusPicker" 
+                    <Picker x:Name="StatusPickerEntry" 
                             Title="Choose a status" 
                             TextColor="Black" 
                             Grid.Row="1"/>
@@ -167,7 +171,8 @@
                            TextColor="Black" 
                            FontSize="20" 
                            FontAttributes="Bold"/>
-                    <Entry Placeholder="Enter instructor name"
+                    <Entry x:Name="InstructorNameEntry"
+                           Placeholder="Enter instructor name"
                            Grid.Row="1"
                            Grid.Column="0"
                            FontSize="20"
@@ -198,7 +203,8 @@
                            TextColor="Black" 
                            FontSize="20" 
                            FontAttributes="Bold"/>
-                    <Entry Placeholder="Enter instructor email"
+                    <Entry x:Name="InstructorEmailEntry"
+                           Placeholder="Enter instructor email"
                            Grid.Row="1"
                            Grid.Column="0"
                            FontSize="20"
@@ -230,7 +236,8 @@
                            TextColor="Black" 
                            FontSize="20" 
                            FontAttributes="Bold"/>
-                    <Entry Placeholder="Enter instructor phone"
+                    <Entry x:Name="InstructorPhoneEntry"
+                           Placeholder="Enter instructor phone"
                            Grid.Row="1"
                            Grid.Column="0"
                            FontSize="20"
@@ -239,7 +246,8 @@
                 </Grid>
             </Frame>
 
-            <Button Text="Save"
+            <Button x:Name="SaveCourseButton"
+                    Text="Save"
                     BackgroundColor="#4CAF50"
                     TextColor="White"
                     FontSize="20"
@@ -247,8 +255,8 @@
                     Margin="20,30,20,20"
                     HeightRequest="50"
                     CornerRadius="10"
-                    x:Name="SaveButton"
-                    HorizontalOptions="Fill"/>
+                    HorizontalOptions="Fill"
+                    Clicked="SaveCourseButton_Clicked"/>
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
